# embeddings

./: .gitignore  README.md  index.html  pyproject.toml
.github/workflow/: docs.yml
.github/workflows/: docs.yml
base/: index.html
byte/: byt5.html  charformer.html  index.html
examples/: nmt.yaml  nmt_transformer.py  sentiment.py
examples/classification/: rnn.py  rnn.yaml
examples/translation/: nmt.yaml  nmt_transformer.py
hash/: canine.html  index.html  pqrnn.html  util.html
notebooks/: nmt.py  nmt_transformer.py
pruning/: index.html  ltp.html
tests/: hash.py  readme.py  visual.py
text_embeddings/: __init__.py  index.html
text_embeddings/base/: __init__.py
text_embeddings/byte/: __init__.py  byt5.py  charformer.py
text_embeddings/hash/: __init__.py  canine.py  index.html  pqrnn.html  pqrnn.py  util.html  util.py
text_embeddings/pruning/: ltp.py
text_embeddings/visual/: __init__.py  index.html  vtr.html  vtr.py
text_embeddings/x/: __init__.py  train.py
visual/: index.html  vtr.html
x/: index.html
