[tool.poetry]
name = "text-embeddings"
version = "0.0.6"
description = "Non-traditional/no-vocabulary text embeddings in one place."
authors = ["Chenghao Mou <mouchenghao@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ChenghaoMou/embeddings"
homepage = "https://github.com/ChenghaoMou/embeddings"

[tool.poetry.dependencies]
python = "^3.7"
Pillow = "^8.2.0"
pytest = "^6.2.3"
torch = "^1.8.1"
transformers = "^4.5.1"
numpy = "^1.20.2"
coverage = "^5.5"
coverage-badge = "^1.0.1"
mmh3 = "^3.0.0"
icecream = "^2.1.0"
pdoc3 = "^0.9.2"
interrogate = "^1.3.2"
loguru = "^0.5.3"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
torchtext = "^0.9.1"
einops = "^0.3.0"
spacy = "^3.0.6"
datasets = "^1.6.2"
tqdm = "4.41"
pytorch-lightning = "^1.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
