[tool.poetry]
name = "text-embeddings"
version = "0.1.0"
description = "zero-vocab or low-vocab embeddings"
authors = ["Chenghao Mou <mouchenghao@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.5.3"
torch = "^1.9.0"
transformers = "^4.8.2"
numpy = "^1.21.1"
einops = "^0.3.0"
Pillow = "^8.3.1"
pytest = "^6.2.4"
mmh3 = "^3.0.0"
pdoc3 = "^0.9.2"

[tool.poetry.dev-dependencies]
datasets = "^1.9.0"
scikit-learn = "^0.24.2"
tqdm = "^4.61.2"
pytorch-lightning = "^1.3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
